--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,38 +18,40 @@
 
 .banner-content h1 {
     font-family: Raleway;
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 900;
     line-height: 1.5;
     background: linear-gradient(180deg, #33A8DB 0%, #1472B7 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
 }
 
 .banner-content p {
     color: #fff;
     font-family: Raleway;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 400;
 }
 
 .banner-content button {
     display: flex;
-    width: 326px;
+    width: 350px;
     text-align: center;
-    padding: 19px 50px;
+    padding: 19px 20px;
     justify-content: center;
     align-items: center;
     gap: 31px;
     background: transparent;
     color: #31A8DD;
     font-family: Raleway;
-    font-size: 16px;
+    font-size: 20px;
     letter-spacing: 3.36px;
     font-weight: 900;
     border: none;
+    text-transform: uppercase;
 
 }
 
@@ -58,5 +60,90 @@
     border: 1px;
     background-color: rgba(0, 0, 0, 0.20);
     border-radius: 50%;
+}
+
+#course-content {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+    margin-top: 200px;
+    margin-left: 20%;
+    margin-right: 20%;
+    gap: 24px;
+}
+
+#course-content h2 {
+    color: #33A8DB;
+    text-transform: uppercase;
+    font-family: Raleway;
+    font-size: 40px;
+    width: 600px;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 6.08px;
+    margin-top: 0px;
+}
+
+#course-content p {
+    color: #fff;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.modules-list {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 750px;
+    padding: 16px 127px;
+}
+
+.module {
+    display: inline-flex;
+    justify-content: center;
+    background-color: #252525;
+    border: 1px solid #33A8DB;
+    border-radius: 57px;
+    height: 40px;
+    padding-top: 15px;
+    box-shadow: -2px 6px 4px 0px rgba(0, 0, 0, 0.40) inset;
+    color: #fff;
+    font-size: 25px;
+}
+
+.modules-list span {
+    color: #33A8DB;
+    margin-right: 5px;
+}
+
+#transform-world {
+    color: #FFF;
+    margin-top: 10px;
+    background-image: url('/assets/images/woman-code.png');
+    background-attachment: fixed;
+    background-size: cover;
+    height: 450px;
+    border-top: 1px solid #33A8DB;
+    border-bottom: 1px solid #33A8DB;
+    text-align: left;
+}
+
+#transform-world p {
+    display: flex;
+    width: 50px;
+    text-shadow: 3px 2px 0px #33A8DB;
+    font-family: Raleway;
+    font-size: 40px;
+    font-weight: 900;
+    margin-left: 10%;
+    line-height: 1.5;
+    padding-top: 60px;
 }
 
