--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -147,3 +147,46 @@
     padding-top: 60px;
 }
 
+#professional-challenges {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+    gap:32px;
+    margin-top: 50px;
+    color: #33A8DB;
+    margin-left: 25%;
+    margin-left: 25%;
+}
+
+#professional-challenges h2 {
+    display: inline-block;
+    width: 900px;
+    text-transform: uppercase;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 6.08px;
+}
+
+
+#professional-challenges img {
+    margin: 10px 30% 10px 10%;
+    width: 659px;
+}
+
+#professional-challenges p {
+    color: #FFF;
+    display: inline-flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
+    margin: 10px 30% 10px 5%;
+    padding-left: 5px;
+    width: 792px;
+}
+
+
