--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -73,6 +73,7 @@
     margin-top: 200px;
     margin-left: 20%;
     margin-right: 20%;
+    margin-bottom: 50px;
     gap: 24px;
 }
 
@@ -152,11 +153,11 @@
     flex-direction: column;
     text-align: center;
     height: auto;
-    gap:32px;
+    gap: 32px;
     margin-top: 50px;
     color: #33A8DB;
     margin-left: 25%;
-    margin-left: 25%;
+    margin-bottom: 20px;
 }
 
 #professional-challenges h2 {
@@ -187,6 +188,42 @@
     margin: 10px 30% 10px 5%;
     padding-left: 5px;
     width: 792px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #33A8DB;
+}
+
+footer p {
+    color: #FFF;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-bottom: 40px;
+    margin-top: 10px;
+    padding-top: 0;
+}
+
+footer img {
+    margin-top: 60px;
+    width: 340px;
+    height: 44px;
+}
+
+footer p a {
+    text-decoration: none;
+    color: #33A8DB;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 
